added remember setting attribute

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-  <theme-toggle-button>
+  <theme-toggle-button remember-setting>
   </theme-toggle-button>
   <main>
     <h1>Theme Toggle Button Example</h1>
